README
### Copyright (c) 2016 Zero, https://www.cognitio.tech

# Permission is hereby granted, free of charge,
# to any person obtaining a copy of this files.
# To deal in the Files without restriction,
# including without limitation the rights to use,
# copy, modify, merge, publish, distribute, sublicense, 
# and/or sell, copies of the Files
#
# THE FILES IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,...
# FOR SHORT, YOU TAKE YOUR OWN RISK.

# This repo. contents 2 files: tokens.c and camelCase.c

# 1. Compiled tokens.c, for example
	
	clang tokens.c
	# Or
	gcc tokens.c

	# Run the a.out file
	./a.out

# 2. Compiled camelCase.c (same above), you probably see the error (may be like this belove)

	camelCase.c:19:11: error: expected identifier or '('
        int auto = 4; // Since auto is a keyword -> crash program. NOTE: remove or comment this line -> OK
                 ^
	1 error generated.

	# Fix the error by remove or comment the line ( int auto = 4; ... ).
	# Of course you can change (auto) to another name (e.g. four), it works too.

	# Recompiled camelCase.c
